syntax = "proto3";

package cartomix.common;

option go_package = "github.com/cartomix/cancun/proto/common;common";

import "google/protobuf/duration.proto";

// Track identity is a content hash + path to keep stable across moves.
message TrackId {
  string content_hash = 1;  // e.g., blake3 of decoded PCM header chunk
  string path = 2;          // original absolute or DJ export path
}

// Beat index and wall-clock time (seconds) to keep both representations handy.
message BeatMarker {
  int32 index = 1;                        // 0-based beat index
  google.protobuf.Duration time = 2;      // seconds from start
  bool is_downbeat = 3;
}

enum SectionLabel {
  SECTION_LABEL_UNSPECIFIED = 0;
  INTRO = 1;
  VERSE = 2;
  BREAKDOWN = 3;
  BUILD = 4;
  DROP = 5;
  OUTRO = 6;
}

message Section {
  int32 start_beat = 1;
  int32 end_beat = 2;
  SectionLabel label = 3;
  float confidence = 4;  // 0..1
}

enum CueType {
  CUE_TYPE_UNSPECIFIED = 0;
  CUE_LOAD = 1;
  CUE_FIRST_DOWNBEAT = 2;
  CUE_INTRO_START = 3;
  CUE_BREAKDOWN = 4;
  CUE_BUILD = 5;
  CUE_DROP = 6;
  CUE_OUTRO_START = 7;
  CUE_SAFETY_LOOP = 8;
}

message CuePoint {
  int32 beat_index = 1;
  google.protobuf.Duration time = 2;
  CueType type = 3;
  float confidence = 4;
  bool user_authored = 5;
}

message TransitionWindow {
  int32 start_beat = 1;
  int32 end_beat = 2;
  string tag = 3;           // e.g., "low_energy", "peak", "break_to_build"
  float confidence = 4;
}

enum KeyFormat {
  KEY_FORMAT_UNSPECIFIED = 0;
  OPEN_KEY = 1;
  CAMELOT = 2;
}

message MusicalKey {
  string value = 1;   // e.g., "8A" (Camelot) or "Am" (OpenKey)
  KeyFormat format = 2;
  float confidence = 3;
}

message EnergySegment {
  int32 start_beat = 1;
  int32 end_beat = 2;
  int32 level = 3;    // 1-10
}

message WaveformTile {
  int32 level = 1;    // zoom level / resolution bucket
  bytes peaks = 2;    // packed int16 peak pairs
}

message TempoMapNode {
  int32 beat_index = 1;
  double bpm = 2;
}

message Beatgrid {
  repeated BeatMarker beats = 1;
  repeated TempoMapNode tempo_map = 2; // empty means static tempo
  float confidence = 3;
  bool is_dynamic = 4;
}

message Loudness {
  float integrated_lufs = 1;
  float true_peak_db = 2;
  float momentary_lufs = 3;
  float short_term_lufs = 4;
  float loudness_range = 5;
}

// OpenL3 512-dimensional embedding for vibe matching
message OpenL3Embedding {
  repeated float vector = 1;  // 512-dim pooled embedding
  int32 window_count = 2;     // Number of 1-second windows processed
}

// Sound classification result from Apple SoundAnalysis
message SoundClassification {
  string primary_context = 1;     // music / speech / noise / silence
  float confidence = 2;           // 0..1
  repeated SoundEvent events = 3;
  repeated QAFlag qa_flags = 4;
}

message SoundEvent {
  string label = 1;         // Apple's 300+ labels
  string category = 2;      // DJ-mapped category
  float confidence = 3;
  double start_time = 4;
  double end_time = 5;
}

message QAFlag {
  string type = 1;      // needs_review, mixed_content, speech_detected, low_confidence
  string reason = 2;
  int32 severity = 3;   // 1-3
  bool dismissed = 4;
}

// Similarity result with explanation
message SimilarTrack {
  TrackId id = 1;
  string title = 2;
  string artist = 3;
  float score = 4;            // 0..1 combined score
  string explanation = 5;     // Human-readable
  float vibe_match = 6;       // OpenL3 cosine similarity %
  float tempo_match = 7;
  float key_match = 8;
  float energy_match = 9;
  float bpm_delta = 10;
  string key_relation = 11;   // same, compatible, harmonic, clash
}

// Training label for custom model training
message TrainingLabel {
  int64 id = 1;
  int64 track_id = 2;
  string content_hash = 3;
  string track_path = 4;
  DJSectionLabel label_value = 5;
  int32 start_beat = 6;
  int32 end_beat = 7;
  double start_time_seconds = 8;
  double end_time_seconds = 9;
  string source = 10;         // user, auto_detected, imported
  int64 created_at = 11;      // Unix timestamp
}

// DJ Section labels for custom training
enum DJSectionLabel {
  DJ_SECTION_UNSPECIFIED = 0;
  DJ_INTRO = 1;
  DJ_BUILD = 2;
  DJ_DROP = 3;
  DJ_BREAK = 4;
  DJ_OUTRO = 5;
  DJ_VERSE = 6;
  DJ_CHORUS = 7;
}

// Training job status
message TrainingJob {
  string job_id = 1;
  TrainingStatus status = 2;
  float progress = 3;           // 0..1
  int32 current_epoch = 4;
  int32 total_epochs = 5;
  float current_loss = 6;
  float accuracy = 7;
  float f1_score = 8;
  string model_path = 9;
  int32 model_version = 10;
  string error_message = 11;
  map<string, int32> label_counts = 12;
  int64 started_at = 13;
  int64 completed_at = 14;
}

enum TrainingStatus {
  TRAINING_STATUS_UNSPECIFIED = 0;
  TRAINING_PENDING = 1;
  TRAINING_PREPARING = 2;
  TRAINING_RUNNING = 3;
  TRAINING_EVALUATING = 4;
  TRAINING_COMPLETED = 5;
  TRAINING_FAILED = 6;
}

// Trained model version
message ModelVersion {
  int32 version = 1;
  string model_type = 2;      // dj_section
  string model_path = 3;
  float accuracy = 4;
  float f1_score = 5;
  bool is_active = 6;
  map<string, int32> label_counts = 7;
  string training_job_id = 8;
  int64 created_at = 9;
}

// Training label statistics
message TrainingLabelStats {
  int32 total_labels = 1;
  map<string, int32> label_counts = 2;
  int32 tracks_covered = 3;
  float avg_per_track = 4;
  bool ready_for_training = 5;
  int32 min_samples_required = 6;
}

// ML settings
message MLSettings {
  bool sound_analysis_enabled = 1;
  bool openl3_enabled = 2;
  bool dj_section_model_enabled = 3;
  bool show_explanations = 4;
  float similarity_threshold = 5;
}

message TrackAnalysis {
  TrackId id = 1;
  double duration_seconds = 2;
  Beatgrid beatgrid = 3;
  MusicalKey key = 4;
  int32 energy_global = 5;
  repeated EnergySegment energy_segments = 6;
  repeated Section sections = 7;
  repeated CuePoint cue_points = 8;
  repeated TransitionWindow transition_windows = 9;
  Loudness loudness = 10;
  bytes embedding = 11;                       // 128-dim MFCC payload
  int32 analysis_version = 12;
  OpenL3Embedding openl3_embedding = 13;      // 512-dim vibe embedding
  SoundClassification sound_classification = 14;
  string sound_context = 15;                  // music / speech / noise
  float sound_context_confidence = 16;
  bool has_qa_flags = 17;
}

message TrackSummary {
  TrackId id = 1;
  string title = 2;
  string artist = 3;
  double bpm = 4;
  MusicalKey key = 5;
  int32 energy = 6;
  int32 cue_count = 7;
  string status = 8; // analyzed / pending / failed
}

message EdgeExplanation {
  TrackId from = 1;
  TrackId to = 2;
  float score = 3;
  string reason = 4;          // human-readable summary
  float tempo_delta = 5;
  int32 energy_delta = 6;
  string key_relation = 7;    // e.g., "same key", "+1 Camelot"
  string window_overlap = 8;
  float vibe_match = 9;       // OpenL3 cosine similarity %
}
